src/components/Footer/Footer.module.scss
@import "src/styles/mixins";
@import "src/styles/typography";
@import "src/styles/colors";
@import "src/styles/variables";
@import "src/styles/buttons";

.footerContainer {
  padding: 3.2rem 1.6rem;

  background-color: var(--color-header-footer);
  box-shadow: 0 -1px 0 0 var(--color-elements);

  @include on-tablet {
    padding: 3.2rem 2.4rem;
  }

  @include on-m-desktop {
    padding: 3.2rem;
  }

  @include on-l-desktop {
    padding: 3.2rem 0;
  }
}

[data-theme = 'light'] .footerContainer {
  --color-text: #89939A;
}

[data-theme = 'dark'] .footerContainer {
  --color-text: #F1F2F9;
}

.contentWrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 3.2rem 1.6rem;
  place-items: center;

  max-width: $maxContainerWidth;
  margin: 0 auto;

  @include on-tablet {
    grid-template-columns: repeat(12, 1fr);
  }

  @include on-m-desktop {
    grid-template-columns: repeat(24, 1fr);
  }
}

.footerLogo {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
  justify-self: start;

  display: flex;
  height: 3.2rem;
  width: 8.9rem;

  background-image: url("../../assets/icons/ok.png");
  background-repeat: no-repeat;
  background-position: 4rem 0;
  background-size: 1.22rem 1.67rem;

  & svg {
    height: 100%;

    fill: var(--color-primary);
  }
}

.reachMeContainer {
  grid-column: 1 / -1;

  list-style: none;
  display: flex;
  flex-direction: column;
  justify-self: start;


  gap: 1.6rem;

  @include on-tablet {
    grid-row: 1 / -1;
    flex-direction: row;
    justify-self: center;
    gap: 1.35rem;
  }

  @include on-m-desktop {
    gap: 10.68rem;
  }
}

.reachMeItem {
  @extend %text-uppercase;

  color: var(--color-text);
  text-decoration: none;
  width: min-content;

  &:hover {
    color: var(--color-primary);
  }
}

.toTop {
  @extend %text-small;

  grid-column: 1 / -1;
  justify-self: center;

  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.6rem;
  color: var(--color-text);
  text-decoration: none;

  &:hover {
    color: var(--color-primary);
    fill: var(--color-primary);
  }

  &:hover > button {
    border-color: var(--color-primary);
  }

  @include on-tablet {
    grid-column: -4 / -1;
    grid-row: 1 / -1;
  }
}

.toTopBtn {
  @extend %button;

  display: flex;
  justify-content: center;
  box-shadow: none;
  width: 3.2rem;
  height: 3.2rem;
  border: 1px solid var(--color-text);
  border-radius: 50%;

  & svg {
    background-color: green;
    display: block;
    fill: var(--color-text);
  }

  &:hover,  &:hover svg {
    border-color: var(--color-primary);
    fill: var(--color-primary);
  }
}

